@@ -5,4 +5,3 @@ LIBTOOL=@LIBTOOL@ --tag=CC
 
 SOURCES_growl = growl.m
 SOURCES_notify = notify.c
-SOURCES_telepathy = telepathy.c
